:ambulance: fix hero overflow on small mobile

--- a/src/assets/css/sections/hero/_hero.scss
+++ b/src/assets/css/sections/hero/_hero.scss
@@ -2,11 +2,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100vh;
+  height: 100svh;
 
   @media screen and (max-width: 991px) {
     flex-direction: column-reverse;
     justify-content: center;
     gap: 50px;
+    min-height: 100svh;
+    height: fit-content;
+    padding: 100px 20px !important;
   }
 }
